--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,9 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:background="#8C1C1E">
+                    android:background="#8C1C1E"
+                    android:descendantFocusability="beforeDescendants"
+                    android:focusableInTouchMode="true">
 
                     <EditText
                         android:layout_width="match_parent"
