--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,13 +1,24 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.workspaceit.themallbd.fragment.CartFragment">
+    tools:context="com.workspaceit.themallbd.fragment.CartFragment"
+    android:orientation="vertical">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/cart_lv">
+        android:id="@+id/cart_lv"
+        android:layout_weight="1"
+        >
 
     </ListView>
-</FrameLayout>
+
+
+
+
+
+
+
+
+</LinearLayout>
