--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,8 +95,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/baby_care"
-                            android:id="@+id/tv_home_cat_baby"
+                            android:id="@+id/tv_home_cat_first"
                             android:layout_gravity="center"
                             android:singleLine="true"
                             android:textSize="@dimen/material_text_caption" />
@@ -126,8 +125,8 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/women_category"
-                            android:id="@+id/tv_home_women"
+
+                            android:id="@+id/tv_home_second"
                             android:layout_gravity="center"
                             android:textSize="@dimen/material_text_caption" />
                     </LinearLayout>
@@ -155,8 +154,8 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/men_category"
-                            android:id="@+id/tv_home_men"
+
+                            android:id="@+id/tv_home_third"
                             android:layout_gravity="center"
                             android:textSize="@dimen/material_text_caption" />
                     </LinearLayout>
