--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -13,6 +13,42 @@
         >
 
     </ListView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:gravity="center|bottom"
+        >
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:id="@+id/continueShoppingButton"
+            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/continueShoppimg"
+            android:textSize="12sp"
+            style="?android:attr/buttonBarButtonStyle"
+            android:background="@drawable/button_shape_grey"
+            android:textColor="#000000"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:id="@+id/checkOutButton"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/proceesToCheckout"
+            android:textSize="12sp"
+            style="?android:attr/buttonBarButtonStyle"
+            android:background="@drawable/selector_button_state"
+            android:textColor="#FFFFFF"/>
+
+    </LinearLayout>
 
 
 
