create contat us layout

--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -10,7 +10,17 @@
         layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+       android:layout_height="wrap_content"
+       android:orientation="vertical">
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="Hello World"
+           android:layout_weight="1"/>
+       <Button
+           android:layout_width="50dp"
+           android:layout_height="60dp"
+           />
 
    </LinearLayout>
 
