--- a/app/src/main/res/layout/fragment_checkout_view.xml
+++ b/app/src/main/res/layout/fragment_checkout_view.xml
@@ -88,11 +88,10 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="number"
             android:id="@+id/checkout_telephone"
             android:layout_marginTop="20dp"
             android:hint="Telephone No"
-
             android:textColorHint="#7F7F7F"
             android:textColor="#7F7F7F"
             android:layout_weight="1"/>
