--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -4,10 +4,106 @@
     android:layout_height="match_parent"
     tools:context="com.workspaceit.themallbd.fragment.RegistrationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="not required" />
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_vertical_margin"
+            android:weightSum="1">
+
+            <EditText
+                android:id="@+id/fname_reg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:hint="First Name"
+                android:paddingBottom="20dp"
+                android:textAlignment="center"
+                android:textColor="#7F7F7F"
+                android:textColorHint="#7F7F7F" />
+
+            <EditText
+                android:id="@+id/lname_reg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:hint="Last Name"
+                android:paddingBottom="20dp"
+                android:textAlignment="center"
+                android:textColor="#7F7F7F"
+                android:textColorHint="#7F7F7F" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:id="@+id/email_reg"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:paddingBottom="20dp"
+                android:textAlignment="center"
+                android:textColor="#7F7F7F"
+                android:textColorHint="#7F7F7F" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:id="@+id/phone_reg"
+                android:hint="Phone"
+                android:inputType="phone"
+                android:paddingBottom="20dp"
+                android:textAlignment="center"
+                android:textColor="#7F7F7F"
+                android:textColorHint="#7F7F7F"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/password_reg"
+                android:layout_marginTop="30dp"
+                android:hint="Password"
+                android:paddingBottom="20dp"
+                android:textAlignment="center"
+                android:textColor="#7F7F7F"
+                android:textColorHint="#7F7F7F"
+                android:inputType="textPassword"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:id="@+id/confrim_pass_reg"
+                android:hint="Confrim Password"
+                android:paddingBottom="20dp"
+                android:textAlignment="center"
+                android:textColor="#7F7F7F"
+                android:textColorHint="#7F7F7F"
+                android:inputType="textPassword"/>
+
+
+            <Button
+                android:id="@+id/registration_button"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="50dp"
+                android:layout_marginTop="20dp"
+                android:background="#D94254"
+                android:text="Submit"
+                android:textAllCaps="true"
+                android:textColor="#FFFFFF"
+                />
+
+
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
