--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -16,7 +16,8 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="24dp" />
+        android:layout_marginStart="24dp"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:layout_width="wrap_content"
