--- a/app/src/main/res/layout/cart_update_count.xml
+++ b/app/src/main/res/layout/cart_update_count.xml
@@ -24,5 +24,6 @@
     android:textColor="@android:color/white"
     android:gravity="center"
     android:padding="2dp"
-    android:singleLine="true">
+    android:singleLine="true"
+   >
 </Button>
