--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -11,53 +11,29 @@
         android:id="@+id/profile_image"
         android:layout_width="76dp"
         android:layout_height="match_parent"
-        android:src="@drawable/icon_un"
         android:layout_marginLeft="24dp"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="24dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_un"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="20sp"
         android:textColor="#FFF"
         android:textStyle="bold"
         android:gravity="start"
-        android:paddingBottom="2dp"
+        android:paddingBottom="6dp"
         android:id="@+id/username_in_navigation"
-        android:layout_above="@+id/email_in_navigation"
+        android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/profile_image"
         android:layout_alignStart="@+id/profile_image"
-        android:text="Register"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/email_in_navigation"
-        android:gravity="start"
-        android:layout_marginBottom="12dp"
-        android:textSize="14sp"
-        android:textColor="#fff"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/username_in_navigation"
-        android:layout_alignStart="@+id/username_in_navigation"
-        android:text="Login"
-        android:paddingBottom="4dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/logout_in_nav"
-        android:gravity="start"
-
-        android:textSize="14sp"
-        android:textColor="#fff"
-        android:text="Logout"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/email_in_navigation"
-        android:layout_alignStart="@+id/email_in_navigation"
         />
+
+
+
 
 </RelativeLayout>
