--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,20 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".activity.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activity.MainActivity">
 
     <item
         android:id="@+id/action_cart"
         android:actionLayout="@layout/cart_update_count"
         app:showAsAction="ifRoom"
-        android:title="cart" />
-    <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_logout"
-        android:title="LogOut"
-        android:orderInCategory="100"
-        app:showAsAction="never"/>
+        android:title="cart"
+
+        />
+
 </menu>
