--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -57,6 +57,11 @@
             android:checked="false"
             android:icon="@drawable/nd_people"
             android:title="@string/nav_item_about_us" />
+        <item
+            android:id="@+id/nav_logout_id"
+            android:checked="false"
+            android:icon="@drawable/logout"
+            android:title="Logout"/>
 
 
     </group>
